app/assets/stylesheets/application.scss
@import "bootstrap-sprockets";
@import "bootstrap";

/*
  *=require_self
  *=require_tree .
  *=require rails_bootstrap_forms
  *= require jquery-ui
*/

.question-wrapper{
  display:table;
}

.question{
  position: relative;
  left: 1em;
  display:table-cell;
}

.space{
  width: 1em;
}

body{
  background-image: url("/assets/bg_loop.png");
  background-size: 1800px 900px;
  z-index: -5;
}

#monkey-wrapper{
  position: fixed;
  bottom: 20px;
}

.panel.panel-primary {
  width: 800px;
  margin: auto;
}

.panel panel-default {
  border: 5px solid orange;
}

.btn.btn-default{
  float: right;
}

#response_body {
  padding: 25px;
}

#show_results {
  position: relative;
  top: 165px;
  right: 24px;
}

.google-sign-in {
  border: 6px solid teal;
}

.sign-in {
  position: relative;
  left: 13%
}

.oauth-bttn-size {
  width: 220px;
  height: 50px;
  position: relative;
  left: 0%;
  top: 20px;
}

.add_question {
  position: absolute;
  right: 10%;
}

#add_question {
  position: relative;
  left: 3%;
  width: 93%;
}

.question {
  width: 98%;
}

.question-wrapper {
  width: 100%;
}

.question-container {
  position: relative;
  width: 90%;
  left: 5%;
  padding-bottom: 25px;
}

.container {
  position: relative;
  top: 75px;
}

.row {
  width: 500px;
  position: relative;
  left: 60%;
}

.col-lg-4 {
  width: 70%;
  position: relative;
  right: 10%;
}

.signin-text-container {
  width: 50%;
  height: 100%;
  float: top;
  position: absolute;
}

.signin-text-container p {
  position: absolute;
  top: 30%;
  color: white;
  text-align: center;
  font-size: 40px;
  display: none;
}

.signin-text-container p:first-child {
  display: block;
}

.survey-title-container {
  position: relative;
  left: 10%;
  top: 50px;
  width: 80%;
  height: 80%;
  border: 3px solid white;
  background-color: rgba(240, 240, 240, 0.5);
  border-radius: 25px;
}

.survey-title-form-container {
  border-radius: 25px;
  height: 500px;
}

.survey-title-form-container p {
  font-family: 'Exo', sans-serif;
  color: rgb(92, 107, 168);
  font-size: 30px;
  position: relative;
  top: 50px;
  left: 20px;
}

.survey-title-form {
  width: 500px;
  position: relative;
  top: 5px;
  left: 250px;
}

.survey-description-form {
  width: 500px;
  position: relative;
  top: 5px;
  left: 250px; 
}

.survey-name-input {
  position: absolute;
  left: 400px;
  width: 95%;
}

#title {
  border-radius: 5px;
  width: 100%;
}

#description {
  border-radius: 5px;
}

.survey-ispublic-form {
  position: relative;
  top: 0px;
  height: 50px;
}

#is_public {
  width: 45px;
  height: 45px;
  position: absolute;
  left: 250px;
  top: 310px;
}

#survey-visibility {
  padding: 12px;
  left: 0px;
  top: 63px;
}

#create_survey_btn {
  position: absolute;
  width: 70px;
  height: 50px;
  right: 100px;
  bottom: 40px;
  border-radius: 10px;
  background: rgba(255, 255, 255, 0.5);
  color: rgb(92, 107, 168);
  font-family: 'Exo', sans-serif;
  font-size: 18px;
}

#survey-url {
  position: absolute;
  width: 200px;
  left: 400px;
  top: 319px;
}

.edit_survey_partial {
  border: 3px solid white;
  border-radius: 25px;
  background-color: rgba(240, 240, 240, 0.5);
  position: absolute;
  left: 7%;
  top: 100px;
  width: 86%;
  height: 560px;
}

.edit_survey_partial h3 {
  position: relative;
  left: 2%;
  width: 96%;
  height: 50px;
  font-family: 'Exo', sans-serif;
  font-size: 25px;
  color: rgb(92, 107, 168);
}

.new-question-text-box {
  border: 3px solid white;
  width: 500px;
  background-color: rgba(240, 240, 240, 0.5) 
}

#add-question-btn {
  position: relative;
  width: 110px;
  height: 30px;
  left: 18%;
  border-radius: 10px;
  background: rgba(255, 255, 255, 0.5);
  color: rgb(92, 107, 168);
  font-family: 'Exo', sans-serif;
  font-size: 14px;
}

.add-question-prompt-container {
  height: 85%;
  width: 100%;
  position: absolute;
  top: 65px;
}

.display-question-form-button {
  width: 150px;
  position: relative;
  left: 100px;
  top: 175px;
}

.new-question-form {
  position: absolute;
  top: 85px;
  left: 5%;
  width: 90%;
}

.add-question-prompt {
  width: 500px;
  position: relative;
  left: 400px;
  top: 100px;
  font-family: 'Exo', sans-serif;
  color: rgb(92, 107, 168);
  font-size: 25px;
}

.add-question-prompt p:first-child {
  position: relative;
  font-size: 35px;
  text-align: center; 
  font-weight: bold;
}

.add-question-prompt p:nth-child(2) {
  text-align: center;
}

.content {
  height: 80%;
}

.question-div {
  height: 40px;
  width: 100%;
  margin-bottom: 20px;
}

.question-text {
  width: 50%;
  height: 100%;
  text-align: center;
  display: flex;
  align-items: center;
  justify-content: left;
  margin-left: 30px;
  float: left;
  font-size: 20px;
}

.set-resp-type-btn {
  float: left;
  display: block;
  margin-left: 25%;
  margin-top: 0px;
  height: 100%;
}

.required-dropdown {
  display: block;
  float: left;
  margin-left: 20px;
  height: 100%;
}

.required-dropdown-toggle {
  height: 100%;
}

.required-dropdown ul {
  position: relative;
  float: right;
}

.modal {
  background: rgba(0, 38, 77, 0.5);
}

.resp-type-container {
  border: 2px solid white;
  border-radius: 15px;
  background: rgba(0, 38, 77, 0.8);
  width: 70%;
  height: 520px;
  position: relative;
  left: 15%;
  top: 85px;
}

.resp-type-container p {
  border-radius: 5px;
  font-family: 'Exo', sans-serif;
  font-size: 20px;
  color: white;
  width: 30%;
  position: relative;
  left: 15px;
  top: 100px;
}

.resp-type-selector fieldset {
  border-radius: 15px;
  width: 30%;
  position: relative;
  left: 15px;
  top: 120px;
}

.resp-type-container label {
  padding-top: 10px;
  padding-bottom: 10px;
  font-family: 'Exo', sans-serif;
  font-size: 16px;
  color: white;
}

.resp-options {
  border-radius: 10px;
  width: 60%;
  height: 97%;
  position: relative;
  top: -182px;
  float: right;
  margin-right: 15px;
}

.resp-options fieldset {
  border: 2px dashed yellow;
  width: 100%;
  height: 100%;
}

.optradio-form {
  position: absolute;
  top: 0px;
  width: 100%;
  height: 100%;
}

.optradio-form p {
  width: 50%;
  position: relative;
  top: 0px;
  float: right;
  margin-right: 30px;
}

.optradio-form button {
  position: absolute;
  left: 20px;
  top: 45px;
}

.mc-answerchoice {
  width: 96%;
  float: right;
}

.ma-answerchoice {
  width: 96%;
  float: right;
}

.submit-answer-choices {
  position: absolute;
  bottom: 12px;
  right: 20px;
}

.answer-choice-tbl {
  width: 90%;
  position: relative;
  top: 50px;
  left: 20px;
}

.answer-choice-tbl td {
  padding-top: 7px;
}

.numerator {
  color: white;
  font-size: 18px;
  font-weight: bold;
  text-align: right;
}

#dummy-txtbox-form table {
  border: 2px dotted yellow;
}

.dummy-txtbox-tbl tr {
  border: 2px dashed #ff3399;
}

.dummy-txtbox-tbl td {
  color: white;
  font-family: 'Exo', sans-serif;
  border: 2px dotted lime;
  padding-top: 10px;
  padding-bottom: 10px;
}

.dummy-txtbox-tbl td > input {
  border: 4px dashed pink;
  width: 100%;
}

.dummy-txtbox-tbl td > input {
  border: 4px dashed pink;
  width: 100%;
}

#resp-type-submit-form {
  border: 2px solid lime;
  width: 100%;
  height: 90%;
  position: relative;
  top: 0px;
  left: 0px;
}

